# logger

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt  Logger.cpp  Logger.hpp  log.cpp  loggerConfig.cmake
src/include/logger/: log.hpp
